// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerCore build calendar month should build the calendar for the given date 1`] = `
Array [
  Array [
    null,
    null,
    2019-01-01T06:00:00.000Z,
    2019-01-02T06:00:00.000Z,
    2019-01-03T06:00:00.000Z,
    2019-01-04T06:00:00.000Z,
    2019-01-05T06:00:00.000Z,
  ],
  Array [
    2019-01-06T06:00:00.000Z,
    2019-01-07T06:00:00.000Z,
    2019-01-08T06:00:00.000Z,
    2019-01-09T06:00:00.000Z,
    2019-01-10T06:00:00.000Z,
    2019-01-11T06:00:00.000Z,
    2019-01-12T06:00:00.000Z,
  ],
  Array [
    2019-01-13T06:00:00.000Z,
    2019-01-14T06:00:00.000Z,
    2019-01-15T06:00:00.000Z,
    2019-01-16T06:00:00.000Z,
    2019-01-17T06:00:00.000Z,
    2019-01-18T06:00:00.000Z,
    2019-01-19T06:00:00.000Z,
  ],
  Array [
    2019-01-20T06:00:00.000Z,
    2019-01-21T06:00:00.000Z,
    2019-01-22T06:00:00.000Z,
    2019-01-23T06:00:00.000Z,
    2019-01-24T06:00:00.000Z,
    2019-01-25T06:00:00.000Z,
    2019-01-26T06:00:00.000Z,
  ],
  Array [
    2019-01-27T06:00:00.000Z,
    2019-01-28T06:00:00.000Z,
    2019-01-29T06:00:00.000Z,
    2019-01-30T06:00:00.000Z,
    2019-01-31T06:00:00.000Z,
    null,
    null,
  ],
]
`;

exports[`DatePickerCore build calendar month should build the calendar for the given date with outside dates enabled 1`] = `
Array [
  Array [
    2018-12-30T06:00:00.000Z,
    2018-12-31T06:00:00.000Z,
    2019-01-01T06:00:00.000Z,
    2019-01-02T06:00:00.000Z,
    2019-01-03T06:00:00.000Z,
    2019-01-04T06:00:00.000Z,
    2019-01-05T06:00:00.000Z,
  ],
  Array [
    2019-01-06T06:00:00.000Z,
    2019-01-07T06:00:00.000Z,
    2019-01-08T06:00:00.000Z,
    2019-01-09T06:00:00.000Z,
    2019-01-10T06:00:00.000Z,
    2019-01-11T06:00:00.000Z,
    2019-01-12T06:00:00.000Z,
  ],
  Array [
    2019-01-13T06:00:00.000Z,
    2019-01-14T06:00:00.000Z,
    2019-01-15T06:00:00.000Z,
    2019-01-16T06:00:00.000Z,
    2019-01-17T06:00:00.000Z,
    2019-01-18T06:00:00.000Z,
    2019-01-19T06:00:00.000Z,
  ],
  Array [
    2019-01-20T06:00:00.000Z,
    2019-01-21T06:00:00.000Z,
    2019-01-22T06:00:00.000Z,
    2019-01-23T06:00:00.000Z,
    2019-01-24T06:00:00.000Z,
    2019-01-25T06:00:00.000Z,
    2019-01-26T06:00:00.000Z,
  ],
  Array [
    2019-01-27T06:00:00.000Z,
    2019-01-28T06:00:00.000Z,
    2019-01-29T06:00:00.000Z,
    2019-01-30T06:00:00.000Z,
    2019-01-31T06:00:00.000Z,
    2019-02-01T06:00:00.000Z,
    2019-02-02T06:00:00.000Z,
  ],
]
`;
